--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-bootstrap": "~0.13.0",
     "jquery": "~2.1.4",
     "lodash": "~3.8.0",
-    "angular-sanitize": "~1.4.0"
+    "angular-sanitize": "~1.4.0",
+    "angular-local-storage": "~0.2.2"
   }
 }
