--- a/bower.json
+++ b/bower.json
@@ -13,15 +13,16 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.15",
-    "angular-ui-router": "~0.2.15",
-    "fontawesome": "~4.3.0",
-    "bootstrap": "~3.3.4",
-    "angular-bootstrap": "~0.13.0",
-    "jquery": "~2.1.4",
-    "lodash": "~3.8.0",
-    "angular-sanitize": "~1.4.0",
-    "angular-local-storage": "~0.2.2",
-    "moment": "~2.10.3"
+    "angular": "~1.x.x",
+    "angular-ui-router": "~x.x.x",
+    "fontawesome": "~4.x.x",
+    "bootstrap": "~3.x.x",
+    "angular-bootstrap": "~0.x.x",
+    "jquery": "~2.x.x",
+    "lodash": "~3.x.x",
+    "angular-sanitize": "~1.x.x",
+    "angular-local-storage": "~0.x.x",
+    "moment": "~2.x.x",
+    "animate.css": "~3.x.x"
   }
 }
