--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "animate.css": "^3.6.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
     "moment": "^2.21.0"
   }
 }
