--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^3.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "moment": "^2.21.0"
   }
 }
