--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "author": "Keith Ott <ducttape12@yahoo.com>",
   "license": "MIT",
   "dependencies": {
+    "angular": "^1.6.9",
+    "angular-local-storage": "^0.7.1",
+    "angular-sanitize": "^1.6.9",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-ui-router": "^1.0.3",
     "animate.css": "^3.6.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
