--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "^1.0.3",
     "animate.css": "^3.6.1",
+    "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
